--- a/soon/index.html
+++ b/soon/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!--===============================================================================================-->	
-	<link rel="icon" type="image/png" href="images/icons/favicon.png"/>
+	<link rel="icon" type="image/png" href="images/icons/favicon.png "/>
 <!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
 <!--===============================================================================================-->
@@ -54,10 +54,9 @@
 			<h3 class="l1-txt2 txt-center p-b-55 respon1">
 				Próximamente
 			</h3>
-			<h1 class="txt-center respon1 subtitle">Una plataforma de cursos de fotografía donde podrás <br>convertirte en un profesional desde casa</h1>
 			<div>
-				<!--<button class="how-btn-play1 flex-c-m">
-					<i class="zmdi zmdi-play"></i>-->
+				<button class="how-btn-play1 flex-c-m">
+					<i class="zmdi zmdi-play"></i>
 				</button>
 			</div>
 		</div>
